--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -446,7 +446,7 @@
                   </div>
                   
                   <div>
-                    <label for="description" class="block text-sm font-medium text-slate-700 mb-1">Description*</label>
+                    <label for="description" class="block text-sm font-medium text-slate-700 mb-1">Short Description*</label>
                     <textarea id="description" rows="4" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500"></textarea>
                   </div>
                 </div>
@@ -460,10 +460,10 @@
                   </h3>
                   <div class="flex space-x-2" id="mediaButtons">
                     <button type="button" id="addImageBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                      <i class="fas fa-image mr-1"></i> Add Image
+                      <i class="fas fa-image mr-1"></i>
                     </button>
                     <button type="button" id="addVideoBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                      <i class="fas fa-video mr-1"></i> Add Video
+                      <i class="fas fa-video mr-1"></i>
                     </button>
                   </div>
                 </div>
@@ -490,7 +490,7 @@
                     <i class="fas fa-clock text-amber-500 mr-2"></i> Timeline
                   </h3>
                   <button type="button" id="addTimelineBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                    <i class="fas fa-plus mr-1"></i> Add Item
+                    <i class="fas fa-plus mr-1"></i> Add 
                   </button>
                 </div>
                 
@@ -511,7 +511,7 @@
                         <i class="fas fa-check-circle text-green-500 mr-2"></i> Included
                       </h3>
                       <button type="button" id="addIncludedBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                        <i class="fas fa-plus mr-1"></i> Add Item
+                        <i class="fas fa-plus mr-1"></i> Add 
                       </button>
                     </div>
                     <div id="includedList" class="space-y-2">
@@ -525,7 +525,7 @@
                         <i class="fas fa-times-circle text-red-500 mr-2"></i> Not Included
                       </h3>
                       <button type="button" id="addNotIncludedBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                        <i class="fas fa-plus mr-1"></i> Add Item
+                        <i class="fas fa-plus mr-1"></i> Add 
                       </button>
                     </div>
                     <div id="notIncludedList" class="space-y-2">
@@ -542,7 +542,7 @@
                     <i class="fas fa-suitcase text-purple-500 mr-2"></i> What to Bring
                   </h3>
                   <button type="button" id="addWhatToBringBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                    <i class="fas fa-plus mr-1"></i> Add Item
+                    <i class="fas fa-plus mr-1"></i> Add 
                   </button>
                 </div>
                 <div id="whatToBringList" class="space-y-2">
@@ -557,7 +557,7 @@
                     <i class="fas fa-concierge-bell text-blue-500 mr-2"></i> Extra Services
                   </h3>
                   <button type="button" id="addTourTypeBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                    <i class="fas fa-plus mr-1"></i> Add Service
+                    <i class="fas fa-plus mr-1"></i> Add 
                   </button>
                 </div>
                 <div id="tourTypeList" class="space-y-2">
