--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -348,10 +348,10 @@
       <!-- Empty state -->
       <div id="emptyState" class="hidden text-center py-12">
         <div class="mx-auto w-24 h-24 bg-slate-100 rounded-full flex items-center justify-center mb-4">
-          <i class="fas fa-suitcase text-slate-400 text-3xl"></i>
+          <i class="fas fa-suitcase text-amber-500 text-3xl"></i>
         </div>
-        <h3 class="text-lg font-medium text-slate-700 mb-2">No trips found</h3>
-        <p class="text-slate-500 mb-4">Create your first trip to get started</p>
+        <h3 class="text-lg font-medium mb-2">No trips found</h3>
+        <p class=" mb-4">Create your first trip to get started</p>
         <button id="emptyStateNewTripBtn" class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white px-4 py-2 rounded-full font-medium shadow-sm transition-all hidden">
           <i class="fas fa-plus mr-2"></i> Create New Trip
         </button>
@@ -402,7 +402,7 @@
                     <label for="bookingLink" class="block text-sm font-medium text-slate-700 mb-1">Booking Link ID*</label>
                     <div class="flex">
                       <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-200 bg-slate-50 text-slate-500 text-sm">
-                        discover-sharm.com
+                        ID 
                       </span>
                       <input type="text" id="bookingLink" required class="flex-1 min-w-0 block w-full p-3 rounded-none rounded-r-lg input-field text-sm focus:ring-2 focus:ring-amber-500">
                     </div>
@@ -460,10 +460,10 @@
                   </h3>
                   <div class="flex space-x-2" id="mediaButtons">
                     <button type="button" id="addImageBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                      <i class="fas fa-image mr-1"></i>
+                     Add <i class="fas fa-image mr-1"></i>
                     </button>
                     <button type="button" id="addVideoBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
-                      <i class="fas fa-video mr-1"></i>
+                     Add <i class="fas fa-video mr-1"></i>
                     </button>
                   </div>
                 </div>
