--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -440,7 +440,7 @@
                     <div class="hidden">
                       <label for="rating" class="block text-sm font-medium text-slate-700 mb-1">Rating*</label>
                       <select id="rating" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
-                      <option value="" selected>Rating</option>
+                      <option value="1" selected>★☆☆☆☆ (1)</option>
                       </select>
                     </div>
                   </div>
