--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -123,7 +123,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="logout">
+                <a href="#" id="logoutBtn" class="logoutBtn">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Logout</span>
                 </a>
