--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -361,6 +361,11 @@
               <button type="button" id="cancelBtn" class="px-4 py-2 rounded-lg bg-gradient-to-r from-slate-500 to-slate-600 hover:from-slate-600 hover:to-slate-700 text-white shadow-sm transition">
                 <i class="fa-solid fa-xmark"></i>
               </button>
+
+<!-- Add this delete button -->
+  <button type="button" id="deleteBtn" class="hidden px-4 py-2 rounded-lg bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white shadow-sm transition">
+    <i class="fas fa-trash"></i>
+  </button>
               
               <button type="submit" id="saveBtn" class="px-4 py-2 rounded-lg bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white shadow-sm transition flex items-center">
                 <i class="fa-regular fa-floppy-disk"></i>
