--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -589,6 +589,13 @@
                         <i class='bx bxs-cloud-download'></i>
                         <span class="text">Export</span>
                     </a>
+                  
+<button id="exportData" class="btn-download flex items-center bg-darker hover:bg-gray-light border border-gray-light hover:border-primary text-light hover:text-primary px-4 py-2 rounded-lg transition-all duration-200">
+                <i class="fas fa-file-excel mr-2"></i>Export
+            </button>
+
+
+
                 </div>
 
                 <div class="container full-width">
