--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -171,7 +171,7 @@
             <button class="filter-btn whitespace-nowrap" data-period="quarter">This Quarter</button>
             <button class="filter-btn whitespace-nowrap" data-period="year">This Year</button>
             <button class="filter-btn whitespace-nowrap" data-period="all">All Time</button>
-            <input type="text" id="dateRangePicker" class="filter-btn whitespace-nowrap" placeholder="Select date range" />
+            <input type="text" id="dateRangePicker" class="filter-btn whitespace-nowrap w-full" placeholder="Select date range" />
                     
                     
                     </div>
