--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -873,7 +873,7 @@
                 <div class="form-group">
                     <label>Payout Method</label>
                     <div>
-                        <select >
+                        <select class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                             <option for="bankAccount" id="bankAccount" name="payoutMethod" value="bank_account" checked>Bank Account</option>
                             <option for="wallet" id="wallet" name="payoutMethod" value="wallet">Wallet</option>
                         </select>
@@ -971,17 +971,17 @@
 
                                 <div class="form-group">
                                     <label for="username">Your Name</label>
-                                    <input type="text" id="userName" value="">
+                                    <input class="text-sm" type="text" id="userName" value="" readonly>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" id="userEmail" value="" disable>
+                                    <input class="text-sm" type="email" id="userEmail" value="" readonly>
                                 </div>
 
                               <div class="form-group">
                                     <label for="phone">Phone</label>
-                                    <input type="phone" id="userPhone" value="" disable>
+                                    <input class="text-sm" type="phone" id="userPhone" value="" readonly>
                                 </div>
 
                                 
