--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -873,7 +873,7 @@
                 <div class="form-group">
                     <label>Payout Method</label>
                     <div>
-                        <select class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
+                        <select class="w-full p-3 rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                             <option for="bankAccount" id="bankAccount" name="payoutMethod" value="bank_account" checked>Bank Account</option>
                             <option for="wallet" id="wallet" name="payoutMethod" value="wallet">Wallet</option>
                         </select>
