--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -715,7 +715,7 @@
   <div class="container full-width">
      <!-- Search and Filter Bar -->
         <div class="glass-card mb-3 sm:mb-4 p-2 sm:p-3 md:p-4">
-            <div class="filter-bar2 flex flex-col-2 sm:flex-row gap-2 sm:gap-3 md:gap-4">
+            <div class="flex flex-col-2 sm:flex-row gap-2 sm:gap-3 md:gap-4">
                 <div class="flex-1">
                     <input type="text" id="searchInput" placeholder="Search bookings..." 
                            class="w-full px-3 py-1 sm:px-4 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
