--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -574,12 +574,12 @@
                         </ul>
                     </div>
                     
-            <button id="exportData" class="btn-download">
+            <button id="exportData" class="btn-download text-white">
                 <i class="fas fa-file-excel mr-2"></i>Export
             </button>
 
           <!-- Filter Bar -->
-                    <div class="filter-bar">
+                    <div class="stats-grid">
 
             <button class="filter-btn active whitespace-nowrap" data-period="week">This Week</button>
             <button class="filter-btn whitespace-nowrap" data-period="month">This Month</button>
