--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -579,13 +579,13 @@
             </button>
 
           <!-- Filter Bar -->
-                    <div class="stats-grid">
+                    <div class="grid grid-cols-2 gap-1">
 
-            <button class="filter-btn active whitespace-nowrap" data-period="week">This Week</button>
+            <button class="filter-btn whitespace-nowrap" data-period="week">This Week</button>
             <button class="filter-btn whitespace-nowrap" data-period="month">This Month</button>
             <button class="filter-btn whitespace-nowrap" data-period="quarter">This Quarter</button>
             <button class="filter-btn whitespace-nowrap" data-period="year">This Year</button>
-            <button class="filter-btn whitespace-nowrap" data-period="all">All Time</button>
+            <button class="filter-btn active whitespace-nowrap" data-period="all">All Time</button>
             <input type="text" id="dateRangePicker" class="filter-btn whitespace-nowrap w-full" placeholder="Select date range" />
                     
                     
