--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -583,10 +583,9 @@
 
             <button class="filter-btn whitespace-nowrap" data-period="week">Week</button>
             <button class="filter-btn whitespace-nowrap" data-period="month">Month</button>
-            <button class="filter-btn whitespace-nowrap" data-period="quarter">Quarter</button>
             <button class="filter-btn whitespace-nowrap" data-period="year">Year</button>
             <button class="filter-btn active whitespace-nowrap" data-period="all">All</button>
-            <input type="text" id="dateRangePicker" class="filter-btn whitespace-nowrap w-full" placeholder="Select date range" />
+            <input type="text" id="dateRangePicker" class="filter-btn whitespace-nowrap col-span-2" placeholder="Select date range" />
                     
                     
                     </div>
