--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -579,7 +579,7 @@
             </button>
 
           <!-- Filter Bar -->
-                    <div class="grid grid-cols-2 gap-1">
+                    <div class="grid grid-cols-2 gap-2 w-[90%]">
 
             <button class="filter-btn whitespace-nowrap" data-period="week">Week</button>
             <button class="filter-btn whitespace-nowrap" data-period="month">Month</button>
