--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -474,7 +474,7 @@
               <!-- Timeline Card -->
               <div class="glass-card p-5 rounded-xl">
                 <div class="flex justify-between items-center mb-4">
-                  <h3 class="font-medium text-slate-700 flex items-center">
+                  <h3 class="font-medium  flex items-center">
                     <i class="fas fa-clock text-amber-500 mr-2"></i> Timeline
                   </h3>
                   <button type="button" id="addTimelineBtn" class="text-xs bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-3 py-1.5 rounded-full shadow-sm">
@@ -711,7 +711,7 @@
   <div class="container full-width">
      <!-- Search and Filter Bar -->
         <div class="glass-card mb-3 sm:mb-4 p-2 sm:p-3 md:p-4">
-            <div class="filter-bar2 flex flex-colns-4 flex-row gap-2 sm:gap-3 md:gap-4">
+            <div class="filter-bar2 flex flex-colns-2 flex-row gap-3 md:gap-4">
                 <div class="">
                     <input type="text" id="searchInput" placeholder="Search bookings..." 
                            class="w-full px-3 py-1 sm:px-4 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
