--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -363,7 +363,7 @@
               </button>
 
 <!-- Add this delete button -->
-  <button type="button" id="deleteBtn" class="hidden px-4 py-2 rounded-lg bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white shadow-sm transition delete-btn" data-id="${id}" ${!canEdit ? 'disabled' : ''}  >
+  <button type="button" id="deleteBtn" style="display:none" class="hidden px-4 py-2 rounded-lg bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white shadow-sm transition delete-btn" data-id="${id}" ${!canEdit ? 'disabled' : ''}  >
     <i class="fas fa-trash"></i>
   </button>
               
@@ -394,7 +394,7 @@
                   <div>
                     <label for="bookingLink" class="block text-sm font-medium  mb-1">Booking Link ID*</label>
                     <div class="flex">
-                      <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-200 bg-slate-500  text-slate-50 text-sm">
+                      <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-800 bg-slate-800  text-slate-50 text-sm">
                         ID 
                       </span>
                       <input type="text" id="bookingLink" required class="flex-1 min-w-0 block w-full p-3 rounded-none rounded-r-lg input-field text-sm focus:ring-2 focus:ring-amber-500">
@@ -406,7 +406,7 @@
                     <div>
                       <label for="price" class="block text-sm font-medium  mb-1">Price (EGP)*</label>
                       <div class="flex">
-                        <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-200 bg-slate-500 text-slate-50 text-sm">
+                        <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-800 bg-slate-800 text-slate-50 text-sm">
                         EGP 
                       </span>
                         
