--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -711,8 +711,8 @@
   <div class="container full-width">
      <!-- Search and Filter Bar -->
         <div class="glass-card mb-3 sm:mb-4 p-2 sm:p-3 md:p-4">
-            <div class="flex flex-colns-1 flex-row gap-3 md:gap-4">
-                <div class="">
+            <div class="grid grid-colns-1 flex-row gap-3">
+                <div class="w-full">
                     <input type="text" id="searchInput" placeholder="Search bookings..." 
                            class="w-full px-3 py-1 sm:px-4 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
                 </div>
