--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -869,7 +869,7 @@
                 <div class="form-group">
                     <label>Payout Method</label>
                     <div>
-                        <select class="w-full px-2 py-1 sm:px-3 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
+                        <select class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                             <option for="bankAccount" id="bankAccount" name="payoutMethod" value="bank_account" checked>Bank Account</option>
                             <option for="wallet" id="wallet" name="payoutMethod" value="wallet">Wallet</option>
                         </select>
