--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -869,7 +869,7 @@
                 <div class="form-group">
                     <label>Payout Method</label>
                     <div>
-                        <select class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
+                        <select id="paymentMethod" class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                             <option value="wallet">Wallet</option>
                             <option value="bankAccount">Bank Account</option>
                         </select>
