--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -120,7 +120,7 @@
                 <a href="#">
                     <img src="" alt="Profile Image" class="profile-photo bx rounded-full" id="profile-photo">
          
-                    <span class="text text-center">Settings</span>
+                    <span class="text text-center">Profile</span>
                 </a>
             </li>
             <li>
@@ -867,10 +867,9 @@
             <form id="payoutForm">
     <!-- Payout Method Selection -->
     <div class="form-group">
-        <label for="payoutMethod">Payout Method</label>  <!-- Fixed: Added 'for' attribute -->
+        <label for="payoutMethod">Payout Method</label>
         <div>
-            <select id="payoutMethod" class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500" required>
-                <option value="" disabled selected>Select payout method</option>
+            <select id="payoutMethod" class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                 <option value="wallet">Wallet</option>
                 <option value="bankAccount">Bank Account</option>
             </select>
