--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -898,7 +898,7 @@
         </div>
     </div>
 
-    <button type="submit" class="btn-primary save-btn"><i class="fa-regular fa-floppy-disk"></i></button>
+    <button type="submit" class="btn-primary save-btn"><i class="fa-regular fa-floppy-disk"></i> Save</button>
 </form>
         </div>
     </div>
