--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -1001,8 +1001,8 @@
         <div id="toast" class="toast"></div>
     </section>
     <!-- CONTENT -->
-<script src="final.js"></script>
-    <script src="script.js"></script>
+<script src="main.js"></script>
+    
      
   
   
