--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -1001,6 +1001,7 @@
         <div id="toast" class="toast"></div>
     </section>
     <!-- CONTENT -->
+<script src="script.js"></script>
 <script src="final.js"></script>
     
      
