--- a/bucket/admin/grad.html
+++ b/bucket/admin/grad.html
@@ -269,13 +269,13 @@
   <!-- Firebase Config -->
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyDrkYUXLTCo4SK4TYWbNJfFLUwwOiQFQJI",
-      authDomain: "egypt-travels.firebaseapp.com",
-      databaseURL: "https://egypt-travels-default-rtdb.firebaseio.com",
-      projectId: "egypt-travels",
-      storageBucket: "egypt-travels.appspot.com",
-      messagingSenderId: "477485386557",
-      appId: "1:477485386557:web:755f9649043288db819354"
+      apiKey: "AIzaSyD96yAIaKEjOBENv26S-Y1C30MTshJd3zU",
+  authDomain: "grad-a.firebaseapp.com",
+  projectId: "grad-a",
+  storageBucket: "grad-a.firebasestorage.app",
+  messagingSenderId: "731678542675",
+  appId: "1:731678542675:web:bc3b6fbf350c5a5d392fa6",
+  measurementId: "G-8PJZN9KZ4Z"
     };
 
     firebase.initializeApp(firebaseConfig);
