--- a/bucket/admin/grad.html
+++ b/bucket/admin/grad.html
@@ -274,8 +274,8 @@
   projectId: "grad-a",
   storageBucket: "grad-a.firebasestorage.app",
   messagingSenderId: "731678542675",
-  appId: "1:731678542675:web:bc3b6fbf350c5a5d392fa6",
-  measurementId: "G-8PJZN9KZ4Z"
+  appId: "1:731678542675:web:8cc2d00cf41ee55a392fa6",
+  measurementId: "G-K0KZW8QGF9"
     };
 
     firebase.initializeApp(firebaseConfig);
