--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -963,7 +963,7 @@
                             <form class="settings-form">
                                 <div class="form-group">
                                     <div class="profile-pic-upload">
-                                        <img src="" class="profile-photo2" alt="Profile" id="profile-pic-preview">
+                                        <img src="" class="profile-photo" id="profile-pic-preview">
                                     </div>
                                 </div>
 
