--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -118,8 +118,7 @@
         <ul class="side-menu">
             <li data-section="settings">
                 <a href="#">
-                    <img src="" alt="Profile Image" class="profile-photo bx rounded-full" id="profile-photo">
-         
+                    <img src="" class="profile-photo" id="profile-pic-preview">
                     <span class="text text-center">Profile</span>
                 </a>
             </li>
