--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -118,7 +118,7 @@
         <ul class="side-menu">
             <li data-section="settings">
                 <a href="#">
-                    <img src="" class="profile-photo" id="profile-pic-s">
+                    <img src="" class="profile-photo" id="profile-s">
                     <span class="text text-center">Profile</span>
                 </a>
             </li>
