--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -118,7 +118,7 @@
         <ul class="side-menu">
             <li data-section="settings">
                 <a href="#">
-                    <img src="" class="profile-photo" id="profile-s">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCSguTpqiMQyYizuEwdgH7LMP1s8_bWJ85LrFm6JFCguzAS5Hy1g3GouU&s=10" class="profile-photo" id="profile-s">
                     <span class="text text-center">Profile</span>
                 </a>
             </li>
@@ -962,7 +962,7 @@
                             <form class="settings-form">
                                 <div class="form-group">
                                     <div class="profile-pic-upload">
-                                        <img src="" class="profile-photo" id="profile-pic-preview">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCSguTpqiMQyYizuEwdgH7LMP1s8_bWJ85LrFm6JFCguzAS5Hy1g3GouU&s=10" class="profile-photo" id="profile-pic-preview">
                                     </div>
                                 </div>
 
