--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -897,8 +897,12 @@
         </div>
     </div>
 
-    <button type="submit" class="btn-primary save-btn"><i class="fa-regular fa-floppy-disk"></i> Save</button>
-</form>
+    
+            <button type="submit" id="savePayoutBtn" class="btn-primary save-btn">
+  <i class="fa-regular fa-floppy-disk"></i> Save
+</button>
+            
+            </form>
         </div>
     </div>
 
