--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -949,3 +949,4 @@
 
     <script src="https://www.discover-sharm.com/admin/script.js"></script>
         <script src="https://www.discover-sharm.com/admin/final.js"></script>
+<script src="https://www.discover-sharm.com/admin/res.js"></script>
