--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -790,20 +790,22 @@
                     </div>
 
                     <!-- Booking Details Modal -->
-                    <div id="bookingDetailsModal" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50 hidden">
-                        <div class="glass-card p-4 sm:p-6 rounded-lg modal-content overflow-y-auto">
-                            <div class="flex justify-between items-center mb-3 sm:mb-4">
-                                <h3 class="text-lg sm:text-xl font-bold" id="modalTitle">Booking Details</h3>
-                                <button onclick="closeModal()" class="text-gray-400 hover:text-white">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                            <div id="bookingDetailsContent" class="space-y-2 sm:space-y-3 text-sm sm:text-base">
-                                <!-- Content will be loaded here -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div id="bookingDetailsModal" class="fixed inset-0 z-[9999] hidden">
+    <div class="absolute inset-0 bg-black bg-opacity-70" onclick="closeModal()"></div>
+    <div class="relative mx-2 my-8 max-w-3xl w-full max-h-[90vh] overflow-y-auto">
+        <div class="glass-card p-4 sm:p-6 rounded-lg shadow-xl transform transition-all duration-300">
+            <div class="flex justify-between items-center mb-4 sticky top-0 bg-gray-900/80 backdrop-blur-sm py-2 z-10">
+                <h3 class="text-lg sm:text-xl font-bold text-amber-400" id="modalTitle">Booking Details</h3>
+                <button onclick="closeModal()" class="text-gray-400 hover:text-white p-1 rounded-full hover:bg-gray-700 transition-colors">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div id="bookingDetailsContent" class="space-y-4 text-sm sm:text-base">
+                <!-- Content will be loaded here -->
+            </div>
+        </div>
+    </div>
+</div>
             </section>
 
             <!-- Payout Section -->
