--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -792,7 +792,7 @@
                     <!-- Booking Details Modal -->
 <div id="bookingDetailsModal" class="fixed inset-0 z-[9999] hidden flex items-center justify-center p-4">
     <!-- Backdrop -->
-    <div class="absolute inset-0 bg-black bg-opacity-70" onclick="closeModal()"></div>
+    <div class="absolute inset-0 bg-black bg-opacity-70" "></div>
     
     <!-- Modal Container -->
     <div class="relative w-full max-w-3xl max-h-[90vh]">
@@ -801,7 +801,7 @@
             <!-- Modal Header -->
             <div class="flex justify-between items-center p-4 sm:p-6 bg-gray-900/80 backdrop-blur-sm sticky top-0 z-10 border-b border-gray-700">
                 <h3 class="text-lg sm:text-xl font-bold text-amber-400">Booking Details</h3>
-                <button id="modalCloseButton" class="text-gray-400 hover:text-white p-1 rounded-full hover:bg-gray-700 transition-colors">
+                <button id="modalCloseButton" class="text-gray-400 hover:text-white p-1 rounded-full hover:bg-gray-700 transition-colors" onclick="closeModal()">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
