--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -792,7 +792,7 @@
                     <!-- Booking Details Modal -->
 <div id="bookingDetailsModal" class="fixed inset-0 z-[9999] hidden flex items-center justify-center p-4">
     <!-- Backdrop -->
-    <div class="absolute inset-0 bg-black bg-opacity-70" "></div>
+    <div class="absolute inset-0 bg-black bg-opacity-70" onclick="closeModal()"></div>
     
     <!-- Modal Container -->
     <div class="relative w-full max-w-3xl max-h-[90vh]">
