--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -817,9 +817,9 @@
                     <button onclick="closeModal()" class="px-4 py-2 rounded-lg bg-gray-700 hover:bg-gray-600 transition-colors">
                         Close
                     </button>
-                    <button onclick="printBookingDetails()" class="px-4 py-2 rounded-lg bg-amber-600 hover:bg-amber-700 transition-colors flex items-center">
-                        <i class="fas fa-print mr-2"></i> Print
-                    </button>
+                    <a id="whatsappButton" href="#" target="_blank" class="px-4 py-2 rounded-lg bg-green-600 hover:bg-green-700 transition-colors flex items-center">
+            <i class="fab fa-whatsapp mr-2"></i> WhatsApp
+        </a>
                 </div>
             </div>
         </div>
