--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -737,7 +737,7 @@
                     <div class="grid grid-cols-1 gap-4 sm:gap-6 md:gap-8 mb-6 sm:mb-8">
                         <!-- Bookings Table -->
                         <div id="bookingsSection" class="glass-card p-5">
-                            <div class="filter-bar2 flex flex-col sm:flex-row justify-between items-start sm:items-center mb-2 sm:mb-3 gap-1 sm:gap-2">
+                            <div id="bookingsFilterBar" class="filter-bar2 flex flex-col sm:flex-row justify-between items-start sm:items-center mb-2 sm:mb-3 gap-1 sm:gap-2">
                                 <h2 class="text-lg sm:text-xl font-semibold" id="bookingsTableTitle">All Bookings</h2>
                                 <div class="flex space-x-1 sm:space-x-2">
                                     <div class="relative">
