--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -1044,9 +1044,7 @@
 
     <script src="https://www.discover-sharm.com/admin/script.js"></script>
         
-    <!-- Package-specific JavaScript -->
-    <script>
+    <script src="https://www.discover-sharm.com/admin/pk.js"></script>
         
-    </script>
 </body>
 </html>
