--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -485,6 +485,7 @@
                                                         <label for="category" class="block text-sm font-medium mb-1">Category*</label>
                                                         <select id="category" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                                                             <option value="">Select Category</option>
+                                                            <option value="Honeymoon">Honeymoon</option>
                                                             <option value="Adventure">Adventure</option>
                                                             <option value="Luxury">Luxury</option>
                                                             <option value="Cultural">Cultural</option>
