--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -486,9 +486,9 @@
                                                         <select id="category" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                                                             <option value="">Select Category</option>
                                                             <option value="Honeymoon">Honeymoon</option>
-                                                            <option value="Adventure">Adventure</option>
+                                                            <option value="Adultonly">Adult Only</option>
                                                             <option value="Luxury">Luxury</option>
-                                                            <option value="Cultural">Cultural</option>
+                                                            <option value="relaxing">Relaxing</option>
                                                             <option value="Family">Family</option>
                                                         </select>
                                                     </div>
