--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -295,7 +295,6 @@
                                     <select id="packagePerformanceMetric" class="filter-btn">
                                         <option value="bookings">By Bookings</option>
                                         <option value="revenue">By Revenue</option>
-                                        <option value="rating">By Rating</option>
                                     </select>
                                 </div>
                             </div>
@@ -311,10 +310,16 @@
                       
                         <!-- Popular Packages Chart -->
                         <div class="glass-card p-5 rounded-xl">
+                          <div class="card-header">
                             <h3 class="font-medium text-lg mb-4 flex items-center">
                                 <i class="fas fa-trophy text-blue-500 mr-2"></i> Popular Packages
                             </h3>
+                          </div>
+                          <div class="card-body">
+                                <div class="chart-container">
                             <canvas id="popularPackagesChart"></canvas>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
