--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -286,7 +286,7 @@
                     <!-- Main Charts Grid -->
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6">
                         <!-- Package Performance Chart -->
-                        <div class="card">
+                        <div class="glass-card p-5 rounded-xl">
                             <div class="card-header">
                                 <h2 class="font-medium text-lg mb-4 flex items-center">
                                 <i class="fas fa-chart-line text-amber-500 mr-2"></i> Package Performance
