--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -241,7 +241,7 @@
 
                 <div class="container">
                     <!-- Stats Summary -->
-                    <div class="stats-grid">
+                    <div class=" grid grid-cols-2 gap-2 w-full">
                         <div class="stat-card">
                             <div class="stat-icon">
                                 <i class="fas fa-calendar-check"></i>
@@ -262,7 +262,7 @@
                             </div>
                         </div>
                         
-                        <div class="stat-card">
+                        <div class="stat-card col-span-2">
                             <div class="stat-icon">
                                 <i class="fas fa-wallet"></i>
                             </div>
