--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -966,13 +966,13 @@
                     <div class="card full-width mt-6">
                         <div class="card-header">
                             <h2 class="card-title">Payout History</h2>
+                          <button onclick="exportPayoutEventsToExcel()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+  <i class="fas fa-file-excel mr-2"></i> Export Payouts
+                          </button>
                         </div>
                         <div class="card-body">
                             <div class="event-list">
-                                <div class="event-item">
-                                    <span class="event-date"></span>
-                                    <span class="event-description"></span>
-                                </div>
+                             <div id="payout-output"></div>
                             </div>
                         </div>
                     </div>
