--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -967,7 +967,7 @@
                         <div class="card-header">
                             <h2 class="card-title">Payout History</h2>
                           <button onclick="exportPayoutEventsToExcel()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
-  <i class="fas fa-file-excel mr-2"></i> Export Payouts
+  <i class="fas fa-file-excel mr-2"></i> Export
                           </button>
                         </div>
                         <div class="card-body">
